--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<main>
 		<section class="hero-section">
 			<div class="container">
-				<img src="alien-lab.jpg" alt="Alien Lab">
+				<img src="https://i.ibb.co/D9PVL8q/00085-2528884041.png" alt="Alien Lab">
 				<h1>The CERN NFT Project</h1>
 				<p class="tagline">Explore the mysteries of the universe with our unique NFT collection.</p>
 				<button class="cta-button">View Collection</button>
