--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<div class="container">
 			<div class="logo">
-				<a href="#">CERN NFT Project</a>
+				<a href="#">CERN</a>
 			</div>
 			<nav>
 				<ul>
@@ -30,7 +30,7 @@
 		<section class="hero-section">
 			<div class="container">
 				<img src="" alt="Alien Lab">
-				<h1>The CERN NFT Project</h1>
+				<h1>CERN</h1>
 				<p class="tagline">Explore the mysteries of the universe with our unique NFT collection.</p>
 				<button class="cta-button">View Collection</button>
 			</div>
@@ -38,8 +38,8 @@
 
 		<section class="about-section">
 			<div class="container">
-				<h2>About the Project</h2>
-				<p>The CERN NFT Project is a digital art collection inspired by the mysteries of the universe and the cutting-edge research conducted at CERN. Our NFTs are unique digital artworks that provide their owners with a certificate of authenticity and exclusive access to special events and content.</p>
+				<h2>About the Reptilians</h2>
+				<p>The Reptilians live in the Electricity. They cloud charge to create Energy. They Volt people into office. They Electrify them to their positions. The world's run by the Reptilians not >HUE<mons.</p>
 			</div>
 		</section>
 
