--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 		<section class="hero-section">
 			<div class="container">
 				<img src="" alt="Alien Lab">
-				<h1>CERN</h1>
-				<p class="tagline">Explore the mysteries of the universe with our unique NFT collection.</p>
+				<h1>Interdiomentianl</h1>
+				<p class="tagline">Explore the mysteries of the universe.</p>
 				<button class="cta-button">View Collection</button>
 			</div>
 		</section>
