--- a/index.html
+++ b/index.html
@@ -35,16 +35,14 @@
 				<button class="cta-button">View Collection</button>
 			</div>
 		</section>
-			<div class="iframe-container">
-				<iframe
-	    			src="https://gateway.ipfscdn.io/ipfs/QmbAgC8YwY36n8H2kuvSWsRisxDZ15QZw3xGZyk9aDvcv7/erc721.html?contract=0xb0C36460af9501FC5DC2553BE0a6645c7E3104D4&chain=%7B%22name%22%3A%22Goerli%22%2C%22chain%22%3A%22ETH%22%2C%22rpc%22%3A%5B%22https%3A%2F%2Fgoerli.rpc.thirdweb.com%2F5a9bc94b87f7cbbbfbbc234bf1e07f0adf5f3cf3012c9f26f9fc9820d64df93a%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22Goerli+Ether%22%2C%22symbol%22%3A%22ETH%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22gor%22%2C%22chainId%22%3A5%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22goerli%22%7D&theme=dark&primaryColor=blue"
-	   			width="600px"
-	    			height="600px"
+			<div class="iframe-container" style="text-align:center;">
+    				<iframe src="https://gateway.ipfscdn.io/ipfs/QmbAgC8YwY36n8H2kuvSWsRisxDZ15QZw3xGZyk9aDvcv7/erc721.html?contract=0xb0C36460af9501FC5DC2553BE0a6645c7E3104D4&chain=%7B%22name%22%3A%22Goerli%22%2C%22chain%22%3A%22ETH%22%2C%22rpc%22%3A%5B%22https%3A%2F%2Fgoerli.rpc.thirdweb.com%2F5a9bc94b87f7cbbbfbbc234bf1e07f0adf5f3cf3012c9f26f9fc9820d64df93a%22%5D%2C%22nativeCurrency%22%3A%7B%22name%22%3A%22Goerli+Ether%22%2C%22symbol%22%3A%22ETH%22%2C%22decimals%22%3A18%7D%2C%22shortName%22%3A%22gor%22%2C%22chainId%22%3A5%2C%22testnet%22%3Atrue%2C%22slug%22%3A%22goerli%22%7D&theme=dark&primaryColor=blue"
+	    			width="600px"
+	   			height="600px"
 	    			style="max-width:100%;"
 	    			frameborder="0"
-	    			></iframe>
-	    		</div>
-		
+				></iframe>
+			</div>
 		<section class="about-section">
 			<div class="container">
 				<h2>About the Reptilians</h2>
