--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<div class="container">
 				<img src="" alt="Alien Lab">
 				<h1></h1>
-				<p class="tagline">Explore the mysteries of the universe.</p>
+				<p class="tagline">The Reptilians live in the Electricity. They cloud charge to create Energy.</p>
 				<button class="cta-button">View Collection</button>
 			</div>
 		</section>
