--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 				<ul>
 					<li><a href="#">Twitter</a></li>
 					<li><a href="#">Discord</a></li>
+					<li><a href="#">Opensea</a></li>
 				</ul>
 			</nav>
 		</div>
