--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="container">
 				<img src="" alt="Alien Lab">
 				<h1></h1>
-				<p class="tagline">The Reptilians live in the Electricity. They cloud charge to create Energy.</p>
+				<p class="tagline"></p>
 				<button class="cta-button">View Collection</button>
 			</div>
 		</section>
